tests/baselines/reference/overridingPrivateStaticMembers.errors.txt
tests/cases/compiler/overridingPrivateStaticMembers.ts(5,7): error TS2417: Class static side 'typeof Derived2' incorrectly extends base class static side 'typeof Base2'.
  Types have separate declarations of a private property 'y'.


==== tests/cases/compiler/overridingPrivateStaticMembers.ts (1 errors) ====
    class Base2 {
        private static y: { foo: string };
    }
     
    class Derived2 extends Base2 {
          ~~~~~~~~
!!! error TS2417: Class static side 'typeof {|Derived2|0|}' incorrectly extends base class static side 'typeof {|Base2|1|}'.
!!! error TS2417:   Types have separate declarations of a private property 'y'.
!!! annotated symbol 0 tests/cases/compiler/overridingPrivateStaticMembers.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/overridingPrivateStaticMembers.ts:1:7
        private static y: { foo: string; bar: string; };
    }